# oomuse-core

./: CMakeLists.txt  README.md  conanfile.py
include/oomuse/core/: FixedArray.h  Optional.h  Validator.h  Validators.h  constexpr_assert.h  int_types.h  readability_macros.h  strings.h
src/oomuse/core/: strings.cpp
test/oomuse/core/: FixedArray_test.cpp  Optional_test.cpp  Validators_test.cpp  constexpr_assert_test.cpp  strings_test.cpp
